--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .banner {
-    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('/images/Banner-Image.png');
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('images/Banner-Image.png');
     width: 85%;
     max-width: 1320px;
     height: 600px;
@@ -73,7 +73,7 @@
 
 /* Party Section */
 .party-section {
-    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('/images/Vectorrr.png');
+    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('images/Vectorrr.png');
     background-size: cover;
     display: flex;
     gap: 40px;
